--- a/index.html
+++ b/index.html
@@ -14,9 +14,9 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Malculator</title>
-    <!--
-    <link rel="icon" type="image/x-icon" href="/Art/garnet_gem.png">
-    -->
+
+    <link rel="icon" type="image/x-icon" href="/Art/olivine_gem.png">
+  
     <link rel="stylesheet" href="style.css" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
