adding imac session

--- a/index.html
+++ b/index.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html lang="en">
 
@@ -27,12 +26,13 @@
   <body>
 
     <div class="flex column alignItemsCenter">
-      <h1 class="lobster">Ram's Handy Malculator</h1>
+      <h1 id="title" class="lobster">Malculator</h1>
     </div>
-    <div class="flex column pageContainer">
-      <div id="screen">
+    
+    <div id="screenAndButtons" class="flex column pageContainer alignItemsCenter">
+      <div id="screen" class="flex row justifySpaceEvenly padded">
       </div>
-      <div id="buttonGrid">
+      <div id="buttonGrid" class="width-75">
       </div>
     </div>
 
@@ -43,4 +43,3 @@
 
   
 </html>
-
