--- a/index.html
+++ b/index.html
@@ -26,16 +26,19 @@
   
   <body>
 
+
     <div class="flex column alignItemsCenter">
       <h1 id="title" class="lobster">Crystal-Calc</h1>
     </div>
+
     
     <div id="screenAndButtons" class="flex column pageContainer alignItemsCenter">
-
-        <div id="screen" class="flex row end alignItemsCenter padded">
+      
+      <div id="screenContainer" class="flex justifyContentCenter">
+        <div id="screen" class="flex padded end alignItemsCenter">
           <h3 id="screenDisplay"></h3>
         </div>
-
+      </div>
 
 
         <div id="buttonGrid" class="width-75 alignItemsCenter">
