--- a/index.html
+++ b/index.html
@@ -27,22 +27,23 @@
   <body>
 
 
-    <div class="flex column alignItemsCenter">
-      <h1 id="title" class="lobster">Crystal-Calc</h1>
-    </div>
+
 
     
-    <div id="screenAndButtons" class="flex column pageContainer alignItemsCenter">
+    <div id="screenAndButtons" class="flex column pageContainer alignItemsCenter paddedMajor justifyContentCenter">
       
-      <div id="screenContainer" class="flex justifyContentCenter">
+      <div id="screenContainer" class="flex column justifyContentCenter width-75 alignItemsCenter">
+        <div class="flex column alignItemsCenter">
+          <h1 id="title" class="lobster">Crystal-Calc</h1>
+        </div>
         <div id="screen" class="flex padded end alignItemsCenter">
           <h3 id="screenDisplay"></h3>
         </div>
       </div>
 
 
-        <div id="buttonGrid" class="width-75 alignItemsCenter">
-        </div>
+      <div id="buttonGrid" class="alignItemsCenter">
+      </div>
 
     </div>
 
