--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Crystal-Calc</title>
 
-    <link rel="icon" type="image/x-icon" href="/Art/olivine_gem.png">
+    <link rel="icon" type="image/x-icon" href="./Art/olivine_gem.png">
   
     <link rel="stylesheet" href="style.css" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
