--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
       </div>
 
       <div id="screenContainer" class="flex column justifyContentCenter alignItemsCenter">
-
+        <img src="./Art/gemmyBG.svg" alt="" style="position: absolute; z-index: -10; max-width: 80%;">
         <div id="screen" class="flex end alignItemsCenter">
           <h3 id="screenDisplay"></h3>
         </div>
